--- a/Back-end/docker-compose.yaml
+++ b/Back-end/docker-compose.yaml
@@ -58,4 +58,19 @@ services:
     container_name: nginx
     ports:
       - "80:80"
-    
+
+  expo:
+    networks:
+      - capstone_project_network
+    restart: always
+    container_name: expo
+    build: ../Mobile-app
+    ports:
+      - '19000:19000'
+    environment:
+      - NODE_ENV=development
+      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+      - REACT_NATIVE_PACKAGER_HOSTNAME=172.20.10.3
+    volumes:
+      - ../Mobile-app:/Mobile-app
+      - "/Mobile-app/node_modules"
