Songs & Playlist APIs, controllers, routes, migrations, seeders and models

--- a/Back-end/docker-compose.yaml
+++ b/Back-end/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: '1.0'
 
 networks:
-  capstone_project_network:
-    name: capstone_project_network
+  nhat_capstone_project_network:
+    name: nhat_capstone_project_network
 
 services:
-  nodejs:
+  nhat_nodejs:
     networks:
-      - capstone_project_network
+      - nhat_capstone_project_network
     restart: always
     build: 
       context: .
@@ -19,11 +19,11 @@ services:
       - .:/Back-end
       - "/Back-end/node_modules"
     depends_on:
-      - mysql
+      - nhat_mysql
 
-  mysql:
+  nhat_mysql:
     networks:
-      - capstone_project_network
+      - nhat_capstone_project_network
     restart: always
     image: mysql:8.0
     container_name: mysql
@@ -37,9 +37,9 @@ services:
       - MYSQL_PASSWORD=secret
       - MYSQL_ROOT_PASSWORD=root
   
-  phpmyadmin:
+  nhat_phpmyadmin:
     networks:
-      - capstone_project_network
+      - nhat_capstone_project_network
     image: phpmyadmin:5.2.1
     restart: always
     container_name: phpmyadmin
@@ -48,29 +48,29 @@ services:
     environment:
       - PMA_HOST=mysql
     depends_on:
-      - mysql
+      - nhat_mysql
 
-  nginx:
+  nhat_nginx:
     networks:
-      - capstone_project_network
+      - nhat_capstone_project_network
     restart: always
     image: nginx:latest
     container_name: nginx
     ports:
       - "80:80"
 
-  expo:
-    networks:
-      - capstone_project_network
-    restart: always
-    container_name: expo
-    build: ../Mobile-app
-    ports:
-      - '19000:19000'
-    environment:
-      - NODE_ENV=development
-      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.8.2
-    volumes:
-      - ../Mobile-app:/Mobile-app
-      - "/Mobile-app/node_modules"
+  # expo:
+  #   networks:
+  #     - capstone_project_network
+  #   restart: always
+  #   container_name: expo
+  #   build: ../Mobile-app
+  #   ports:
+  #     - '19000:19000'
+  #   environment:
+  #     - NODE_ENV=development
+  #     - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+  #     - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.8.2
+  #   volumes:
+  #     - ../Mobile-app:/Mobile-app
+  #     - "/Mobile-app/node_modules"
