--- a/Mobile-app/package.json
+++ b/Mobile-app/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/compat": "^5.1.25",
@@ -21,6 +22,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@use-expo/font": "^2.0.0",
+    "axios": "^1.4.0",
     "expo": "^48.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-asset": "~8.9.1",
@@ -28,7 +30,9 @@
     "expo-modules-core": "~1.2.6",
     "galio-framework": "^0.8.0",
     "prop-types": "^15.7.2",
+    "qs": "^6.11.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
