--- a/Back-end/docker-compose.yaml
+++ b/Back-end/docker-compose.yaml
@@ -5,21 +5,21 @@ networks:
     name: capstone_project_network
 
 services:
-  # flask-server:
-  #   networks:
-  #     - capstone_project_network
-  #   restart: always
-  #   container_name: flask-server
-  #   build: 
-  #     context: ../Flask-server
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "5000:5000"
-  #     - "6006:6006"
-  #     - "8888:8888"
-  #   volumes:
-  #     - ../Flask-server:/Flask-server
-  #     - ./public:/Flask-server/public
+  flask-server:
+    networks:
+      - capstone_project_network
+    restart: always
+    container_name: flask-server
+    build: 
+      context: ../Flask-server
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+      - "6006:6006"
+      - "8888:8888"
+    volumes:
+      - ../Flask-server:/Flask-server
+      - ./public:/Flask-server/public
 
   nodejs:
     networks:
@@ -66,27 +66,27 @@ services:
     depends_on:
       - mysql
 
-  # nginx:
-  #   networks:
-  #     - capstone_project_network
-  #   restart: always
-  #   image: nginx:latest
-  #   container_name: nginx
-  #   ports:
-  #     - "80:80"
+  nginx:
+    networks:
+      - capstone_project_network
+    restart: always
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
 
-  # expo:
-  #   networks:
-  #     - capstone_project_network
-  #   restart: always
-  #   container_name: expo
-  #   build: ../Mobile-app
-  #   ports:
-  #     - '19000:19000'
-  #   environment:
-  #     - NODE_ENV=development
-  #     - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-  #     - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.1.180
-  #   volumes:
-  #     - ../Mobile-app:/Mobile-app
-  #     - "/Mobile-app/node_modules"
+  expo:
+    networks:
+      - capstone_project_network
+    restart: always
+    container_name: expo
+    build: ../Mobile-app
+    ports:
+      - '19000:19000'
+    environment:
+      - NODE_ENV=development
+      - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+      - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.1.27
+    volumes:
+      - ../Mobile-app:/Mobile-app
+      - "/Mobile-app/node_modules"
