Update Playlist screen and components

--- a/Mobile-app/app.json
+++ b/Mobile-app/app.json
@@ -22,7 +22,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "audio"
+        ]
+      }
     },
     "description": "Argon React Native, based on Argon Design System. Coded by Creative Tim"
   }
