--- a/Mobile-app/package.json
+++ b/Mobile-app/package.json
@@ -15,33 +15,35 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
-    "@react-native-masked-view/masked-view": "0.2.8",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/compat": "^5.1.25",
-    "@react-navigation/drawer": "5.12.4",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "^6.2.1",
-    "@use-expo/font": "^2.0.0",
-    "axios": "^1.4.0",
-    "expo": "^48.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-asset": "~8.9.1",
-    "expo-font": "~11.1.1",
-    "expo-modules-core": "~1.2.6",
-    "galio-framework": "^0.8.0",
-    "prop-types": "^15.7.2",
-    "qs": "^6.11.2",
-    "react": "18.2.0",
-    "react-hook-form": "^7.45.0",
-    "react-native": "0.71.7",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "@react-native-community/checkbox": "*",
+    "@react-native-masked-view/masked-view": "*",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/compat": "*",
+    "@react-navigation/drawer": "*",
+    "@react-navigation/native": "*",
+    "@react-navigation/stack": "*",
+    "@use-expo/font": "*",
+    "axios": "*",
+    "expo": "*",
+    "expo-app-loading": "*",
+    "expo-asset": "*",
+    "expo-checkbox": "~2.4.0",
+    "expo-font": "*",
+    "expo-modules-core": "*",
+    "galio-framework": "*",
+    "prop-types": "*",
+    "qs": "*",
+    "react": "*",
+    "react-hook-form": "*",
+    "react-native": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-modal-dropdown": "*",
+    "react-native-reanimated": "*",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*"
   },
   "devDependencies": {
-    "babel-preset-expo": "~9.1.0"
+    "babel-preset-expo": "*"
   },
   "keywords": [
     "argon react native",
