--- a/Mobile-app/app.json
+++ b/Mobile-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Argon FREE React Native",
-    "slug": "argon-free-react-native",
+    "name": "Rhyth Mix",
+    "slug": "rhyth-mix",
     "privacy": "public",
     "platforms": [
       "ios",
@@ -22,13 +22,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "UIBackgroundModes": [
-          "audio"
-        ]
-      }
+      "supportsTablet": true      
     },
-    "description": "Argon React Native, based on Argon Design System. Coded by Creative Tim"
+    "plugins": [
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
+      ]
+    ]
   }
 }
