--- a/Mobile-app/package.json
+++ b/Mobile-app/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/MaiXuanNhat/Capstone-Project.git"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
     "@react-native-community/checkbox": "*",
     "@react-native-masked-view/masked-view": "*",
